--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.5.0
   firebase_storage: ^11.1.2
   flutter_svg: ^2.0.5
+  image_picker: ^0.8.7+4
 
 dev_dependencies:
   flutter_test:
