--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   flutter_svg: ^2.0.5
   image_picker: ^0.8.7+4
   provider: ^6.0.5
+  uuid: ^3.0.7
+  intl: ^0.18.1
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   flutter_test:
